--- a/metacatui/src/main/webapp/js/themes/knb/css/metacatui.css
+++ b/metacatui/src/main/webapp/js/themes/knb/css/metacatui.css
@@ -979,21 +979,27 @@ Bold 700 Italic
 	.current-filters > li,
 	.current-filters > li[class*="span"]{
 		background-color: rgba(17, 94, 149, .8);
-		padding-left: 10px;
-		margin-top: 3px;
-		width: 99%;
+		color: #FFFFFF;
+		padding: 0px 5px 0px 5px;
 		border-radius: 2px;
 		-moz-border-radius: 2px;
 		-webkit-border-radius: 2px;
 		min-height: 1em;
-		margin-left: 0px;
-		color: #FFFFFF;
+		width: auto;
+		max-width: 100%;
+		margin: 5px 5px 0px 0px;
+	}
+	
+	.current-filters > li > span{
+		float: left;
+		margin-right: 5px;
+		line-height: 1.5em;
 	}
 	
 	.current-filters > li > i{
 		float: right;
 		margin-top: 2px;
-		color: #FFFFFF;
+		color: #8DBCDD;
 	}
 	
 	.current-filters > li > i:hover{
@@ -1079,6 +1085,37 @@ Bold 700 Italic
     	float: right;
     	cursor: pointer;
     }
+    
+         /* Autocomplete */
+    ul.ui-autocomplete{
+    	width: 246px;
+    	background-color: #FFFFFF;
+    	border: 1px solid #999999;
+    	padding: 10px;
+    	list-style: none;
+    	overflow-y: scroll;
+    	max-height: 250px;
+    	z-index: 100;
+    }
+    
+    li.ui-menu-item{
+    	width: 245px;
+    	overflow: hidden;
+    	white-space: nowrap;
+    	text-overflow: ellipsis;
+    	background-color:#FFFFFF;
+    }
+    
+    li.ui-menu-item > a{
+    	color: #555555;
+    	font: 400 1em/1.8em "Source Sans Pro", Arial, sans-serif;
+    	width: 245px;
+    }
+    
+    li.ui-menu-item > a:hover{
+    	color: #166194;
+    	cursor: pointer;
+    }
 
 /* RESULT CSS
 -------------------------------------------------- */
@@ -1122,6 +1159,25 @@ Bold 700 Italic
     	margin: auto;
     }
 
+	.result-row .icon-download-alt{
+		font-size: 18px;
+	}
+	
+	.result-row .icon-caret-down{
+		font-size: 15px;
+	}
+	
+  	.result-row .download{
+  		position: relative;
+  	}
+  	
+  	.result-row .download:hover i{
+  		text-decoration: none;
+  	}
+  	
+  	.result-row .dropdown-menu{
+  		left: -100%;
+  	}
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 /*    
